--- a/views/sequence.xml
+++ b/views/sequence.xml
@@ -12,5 +12,16 @@
 		    <field name="prefix">%(year)s/%(month)s/</field>
 		    <field name="padding">4</field>
 		</record>
+
+		<record id="pikcup_delivery_trip_seqence_type" model="ir.sequence.type">
+			<field name="name">Number Code</field>
+			<field name="code">pickup.delivery.trip.sequence</field>
+		</record>
+		<record id="pikcup_delivery_trip_seqence" model="ir.sequence">
+			<field name="name">Number Code</field>
+			<field name="code">pickup.delivery.trip.sequence</field>
+			<field name="prefix">%(year)s/%(month)s/</field>
+			<field name="padding">4</field>
+		</record>
 	</data>
 </openerp>
